[package]
name = "epub-gen"
version = "0.0.0"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
]
exclude = [
  "**/*.epub",
  "**/*.zip",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6.4", default-features = false, features = ["deflate-zlib"] }
slugify = "0.1.0"
chrono = "0.4.24"
[dependencies.uuid]
version = "1.3.0"
features = [
  "v4",
]